# realmate-challange-dev-2025

./: Dockerfile  INSTRUCTIONS.md  README.md  docker-compose.yaml  pyproject.toml
conversation/: enums.py  models.py  serializers.py  tests.py  urls.py  views.py
conversation/migrations/: 0001_initial.py  0002_alter_conversation_table_alter_message_table.py  0003_alter_conversation_table_alter_message_table.py
conversation/services/: webhook_handler.py
realmate_challenge/: settings.py  urls.py
static/app/: conversation.html  index.html  script.js  style.css
